force-app/main/default/objects/Activity/fields/DataHoraInteracao__c.field-meta.xml
<CustomField>
    <fullName>DataHoraInteracao__c</fullName>
    <label>Data e horário da interação</label>
    <type>DateTime</type>
</CustomField>