force-app/main/default/objects/Activity/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <inlineHelpText>Este campo permite no máximo 255 caracteres</inlineHelpText>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>