force-app/main/default/objects/Activity/fields/EmpreendimentoInteresse__c.field-meta.xml
<CustomField>
    <fullName>EmpreendimentoInteresse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empreendimento</label>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>