force-app/main/default/objects/Activity/fields/Midia__c.field-meta.xml
<CustomField>
    <fullName>Midia__c</fullName>
    <label>Mídia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>