force-app/main/default/objects/Activity/fields/MotivoCompromissoNaoRealizado__c.field-meta.xml
<CustomField>
    <fullName>MotivoCompromissoNaoRealizado__c</fullName>
    <label>Motivo do compromisso não realizado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StatusVisita__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACIMA DO VALOR PROCURADO</fullName>
                <label>Acima do Valor Procurado</label>
            </value>
            <value>
                <fullName>NÃO ESTÁ NA REGIÃO</fullName>
                <label>Não Está na Região</label>
            </value>
            <value>
                <fullName>NÃO TEM INTERESSE</fullName>
                <label>Não Tem Interesse</label>
            </value>
            <value>
                <fullName>IMÓVEL NÃO SE ENQUADRA NA PROCURA</fullName>
                <label>Imóvel Não se Enquadra na Procura</label>
            </value>
            <value>
                <fullName>NÃO RESPONDE/ATENDE</fullName>
                <label>Não Responde/Atende</label>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Cliente desistiu</fullName>
            </value>
            <value>
                <fullName>Cliente ira reagendar</fullName>
                <label>Cliente irá reagendar</label>
            </value>
            <value>
                <fullName>Desistiu da compra</fullName>
            </value>
            <value>
                <fullName>Não responde</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>