force-app/main/default/objects/Activity/fields/MotivoVisitaNaoRealizada__c.field-meta.xml
<CustomField>
    <fullName>MotivoVisitaNaoRealizada__c</fullName>
    <label>Motivo da visita não realizada</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StatusVisita__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>ACIMA DO VALOR PROCURADO</fullName>
            </value>
            <value>
                <fullName>NÃO ESTÁ NA REGIÃO</fullName>
            </value>
            <value>
                <fullName>NÃO TEM INTERESSE</fullName>
            </value>
            <value>
                <fullName>IMÓVEL NÃO SE ENQUADRA NA PROCURA</fullName>
            </value>
            <value>
                <fullName>NÃO RESPONDE/ATENDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>