force-app/main/default/objects/Activity/fields/OrigemLead__c.field-meta.xml
<CustomField>
    <fullName>OrigemLead__c</fullName>
    <label>Origem do Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>