force-app/main/default/objects/Activity/fields/StatusVisita__c.field-meta.xml
<CustomField>
    <fullName>StatusVisita__c</fullName>
    <label>Status do compromisso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Agendado</label>
            </value>
            <value>
                <fullName>Done</fullName>
                <label>Realizado com sucesso</label>
            </value>
            <value>
                <fullName>NotDone</fullName>
                <label>Não realizado</label>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Não compareceu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>